--- a/Google/index.html
+++ b/Google/index.html
@@ -55,22 +55,24 @@
     <!--Mettre une height entre 300 et 500px pour le bloc du milieu puis bidouiller margin / padding-->
     <footer class= "border-flex">
       <div class="barre">
-        <p>France</p>
-        <div class="aide">
-          <p class="touche"><a href="https://support.google.com/websearch/answer/9586983?p=fr_tos&hl=fr&fg=1&visit_id=637212678391588016-1642573257&rd=1">Publication judiciaire</a></p>
-          <p class="touche">Info consommateurs</p>
-          <p class="touche">Confidentialité</p>
-          <p class="touche">Conditions</p>
-          <p class="touche">Paramètres</p>
+        <div class="France">
+          <p class="pays">France</p>
         </div>
         <div class="aide">
-          <p class="touche">Publicité</p>
-          <p class="touche">Entreprise</p>
-          <p class="touche">A propos</p>
-          <p class="touche">Comment fonctionne la recherche Google ?</p>
+          <div class="aide1">
+            <p><a class="touche" href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a></p>
+            <p><a class="touche" href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Entreprise</a></p>
+            <p><a class="touche" href="https://about.google/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1">A propos</a></p>
+            <p><a class="touche" href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google ?</a></p>
+          </div>
+          <div class="aide2">
+            <p><a class="touche" href="https://support.google.com/websearch/answer/7585859?p=fr_consumer_info&hl=fr&fg=1&visit_id=637212844628012054-553780725&rd=1">Info consommateurs</a></p>
+            <p><a class="touche" href="https://policies.google.com/privacy?fg=1">Confidentialité</a></p>
+            <p><a class="touche" href="https://policies.google.com/terms?fg=1">Conditions</a></p>
+            <p><a class="touche" href="https://www.google.com/preferences?hl=fr">Paramètres</a></p>
+          </div>
         </div>
       </div>
-
     </footer>
 
 
